Add offline caching, improve chart scaling, update README to German
- Add AnalyticsCacheService for offline data persistence using App Groups
- Implement try-cache-first pattern in DashboardViewModel
- Fix bar chart width scaling for different date ranges (hourly vs daily)
- Fix chartYScale domain errors in WebsiteDetailView and CompareView
- Fix false offline banner on API errors (now only shows for network issues)
- Update README to German with ValetudiOS-style formatting
- Widget now shares cached data with main app via App Groups

--- a/InsightFlow/Info.plist
+++ b/InsightFlow/Info.plist
@@ -4,34 +4,28 @@
 <dict>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
-		<string>de.godsapp.UmamiInsights.refresh</string>
+		<string>de.godsapp.InsightFlow.refresh</string>
 	</array>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>fetch</string>
-		<string>processing</string>
-	</array>
-	<key>CFBundleDisplayName</key>
-	<string>Insights Flow</string>
-	<key>CFBundleName</key>
-	<string>Insights Flow</string>
 	<key>CFBundleLocalizations</key>
 	<array>
 		<string>en</string>
 		<string>de</string>
 	</array>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>de.godsapp.UmamiInsights</string>
+			<string>de.godsapp.InsightFlow</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>insightsflow</string>
+				<string>insightflow</string>
 			</array>
 		</dict>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
 	</array>
 </dict>
 </plist>
