Rename app to PrivacyFlow, add dashboard website reordering
- Rename InsightFlow to PrivacyFlow throughout the codebase
- Update all bundle IDs to de.godsapp.PrivacyFlow
- Update app groups to group.de.godsapp.PrivacyFlow
- Update URL scheme to privacyflow://
- Add long-press to reorder websites on dashboard
- Website order persists per account
- Add reorder hint localization (DE/EN)

--- a/InsightFlow/Info.plist
+++ b/InsightFlow/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
-		<string>de.godsapp.InsightFlow.refresh</string>
+		<string>de.godsapp.PrivacyFlow.refresh</string>
 	</array>
 	<key>CFBundleLocalizations</key>
 	<array>
@@ -15,10 +15,10 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>de.godsapp.InsightFlow</string>
+			<string>de.godsapp.PrivacyFlow</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>insightflow</string>
+				<string>privacyflow</string>
 			</array>
 		</dict>
 	</array>
