--- a/InsightFlow/InsightFlow.entitlements
+++ b/InsightFlow/InsightFlow.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.de.godsapp.InsightFlow</string>
+		<string>group.de.godsapp.PrivacyFlow</string>
 	</array>
 </dict>
 </plist>
