--- a/InsightFlowWidgetExtension.entitlements
+++ b/InsightFlowWidgetExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.de.godsapp.InsightFlow</string>
+		<string>group.de.godsapp.PrivacyFlow</string>
 	</array>
 </dict>
 </plist>
